[package]
name = "scala-native-demangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scala_native_demangle"
path = "src/lib.rs"

[[bin]]
name = "scala_native_demangle_cli"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
