[package]
name = "scala-native-demangle"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
description = "Demangle Scala Native identifiers"
homepage = "https://github.com/indoorvivants/scala-native-demangle-rs"
repository = "https://github.com/indoorvivants/scala-native-demangle-rs"
readme = "README.md"
keywords = ["scala", "scala-native", "demangler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scala_native_demangle"
path = "src/lib.rs"

[[example]]
name = "cli"

[dev-dependencies]
clap = { version = "4.4.3", features = ["derive"] }
